--- a/app/static/home.css
+++ b/app/static/home.css
@@ -1,7 +1,12 @@
+
+*{
+    background-color: #F3EEE7;
+}
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
   }
+
   
   .topnav {
     position: relative;
