--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -54,5 +54,10 @@
     This works!!!
    </h1> 
    <p>Sure does...</p>
+   <p>Sure does...</p>
+   <p>Sure does...</p>
+   <p>Sure does...</p>
+   <p>Sure does...</p>
+
 </body>
 </html>
