--- a/app/static/home.css
+++ b/app/static/home.css
@@ -5,13 +5,16 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #F3EEE7;
+
   }
 
   
   .topnav {
     position: relative;
     overflow: hidden;
-    background-color: #333;
+    background-color: #F3EEE7;
+    color: black;
   }
   
   .topnav a {
@@ -24,13 +27,13 @@ body {
   }
   
   .topnav a:hover {
-    background-color: #ddd;
+    background-color: #F3EEE7;
     color: black;
   }
   
   .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
+    /* background-color: #04AA6D; */
+    color: black;
   }
   
   .topnav-centered a {
