--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -51,6 +51,9 @@
           <h1 class="text-center mt-3 mb-3"> Watches</h1>
     </div>
   <p>Hello</p>
+  <p>Hello</p>
+  <p>Hello</p>
+  <p>Hello</p>
 
 </body>
 </html>
