--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,10 +10,12 @@
     {% block styles %}
          <link rel="stylesheet" type="text/css" href="{% static 'home.css' %}">
     {% endblock %}
+    <!--Fontawesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
-<body style="    background-color: #F3EEE7;">
+<body style="background-color: #F3EEE7;">
     <div class="container mt-5 mb-2">
         <div class="topnav">
 
@@ -52,11 +54,11 @@
     </div>
 <!--Main Body-->
 
-<div class="container bg-white">
-  <nav class="navbar navbar-expand-md navbar-light bg-white">
+<div class="container">
+  <nav class="navbar navbar-expand-md navbar-light">
       <div class="container-fluid p-0">
           <a class="navbar-brand text-uppercase fw-800" href="#"><span
-                  class="border-red pe-2">New</span>Product</a>
+                  class="border-red pe-2">New</span> Product</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNav"
               aria-controls="myNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="fas fa-bars"></span>
