--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -57,8 +57,8 @@
 <div class="container">
   <nav class="navbar navbar-expand-md navbar-light">
       <div class="container-fluid p-0">
-          <a class="navbar-brand text-uppercase fw-800" href="#"><span
-                  class="border-red pe-2">New</span> Product</a>
+          <a class="navbar-brand fw-100" href="#"><span
+                  class="border-red pe-2">Sort</span> by:</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNav"
               aria-controls="myNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="fas fa-bars"></span>
@@ -66,11 +66,10 @@
           <div class="collapse navbar-collapse" id="myNav">
               <div class="navbar-nav ms-auto">
                   <a class="nav-link active" aria-current="page" href="#">All</a>
-                  <a class="nav-link" href="#">Women's</a>
-                  <a class="nav-link" href="#">Men's</a>
-                  <a class="nav-link" href="#">Kid's</a>
-                  <a class="nav-link" href="#">Accessories</a>
-                  <a class="nav-link" href="#">Cosmetics</a>
+                  <a class="nav-link" href="#">His</a>
+                  <a class="nav-link" href="#">Hers</a>
+                  <a class="nav-link" href="#">Best Seller</a>
+                  <a class="nav-link" href="#">Latest</a>
               </div>
           </div>
       </div>
