finishing styling product details

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -81,9 +81,9 @@
               <img src="https://images.pexels.com/photos/54203/pexels-photo-54203.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                  <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                  <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                  <li class="icon"><span class="fas fa-shopping-bag"></span></li>
+                  <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
+                  <li class="icon mx-3"><span class="far fa-heart" style="background-color: #fff;"></span></li>
+                  <li class="icon"><span class="fas fa-shopping-bag" style="background-color: #fff;"></span></li>
               </ul>
           </div>
           <div class="tag bg-red">sale</div>
@@ -103,9 +103,9 @@
               <img src="https://images.pexels.com/photos/6764040/pexels-photo-6764040.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                  <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                  <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                  <li class="icon"><span class="fas fa-shopping-bag"></span></li>
+                  <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
+                  <li class="icon mx-3"><span class="far fa-heart" style="background-color: #fff;"></span></li>
+                  <li class="icon"><span class="fas fa-shopping-bag" style="background-color: #fff;"></span></li>
               </ul>
           </div>
           <div class="tag bg-black">out of stock</div>
@@ -125,9 +125,9 @@
               <img src="https://images.pexels.com/photos/914668/pexels-photo-914668.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                  <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                  <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                  <li class="icon"><span class="fas fa-shopping-bag"></span></li>
+                  <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
+                  <li class="icon mx-3"><span class="far fa-heart" style="background-color: #fff;"></span></li>
+                  <li class="icon"><span class="fas fa-shopping-bag" style="background-color: #fff;"></span></li>
               </ul>
           </div>
           <div class="tag bg-green">new</div>
@@ -147,9 +147,9 @@
               <img src="https://images.pexels.com/photos/6311392/pexels-photo-6311392.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                  <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                  <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                  <li class="icon"><span class="fas fa-shopping-bag"></span></li>
+                  <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
+                  <li class="icon mx-3"><span class="far fa-heart" style="background-color: #fff;"></span></li>
+                  <li class="icon"><span class="fas fa-shopping-bag" style="background-color: #fff;"></span></li>
               </ul>
           </div>
           <div class="title pt-4 pb-1">Pinafore Dresses</div>
@@ -170,9 +170,9 @@
               <img src="https://images.pexels.com/photos/54203/pexels-photo-54203.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                  <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                  <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                  <li class="icon"><span class="fas fa-shopping-bag"></span></li>
+                  <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
+                  <li class="icon mx-3"><span class="far fa-heart" style="background-color: #fff;"></span></li>
+                  <li class="icon"><span class="fas fa-shopping-bag" style="background-color: #fff;"></span></li>
               </ul>
           </div>
           <div class="tag bg-red">sale</div>
@@ -192,9 +192,9 @@
               <img src="https://images.pexels.com/photos/6764040/pexels-photo-6764040.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                  <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                  <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                  <li class="icon"><span class="fas fa-shopping-bag"></span></li>
+                  <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
+                  <li class="icon mx-3"><span class="far fa-heart" style="background-color: #fff;"></span></li>
+                  <li class="icon"><span class="fas fa-shopping-bag" style="background-color: #fff;"></span></li>
               </ul>
           </div>
           <div class="tag bg-black">out of stock</div>
@@ -214,9 +214,9 @@
               <img src="https://images.pexels.com/photos/914668/pexels-photo-914668.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                  <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                  <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                  <li class="icon"><span class="fas fa-shopping-bag"></span></li>
+                  <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
+                  <li class="icon mx-3"><span class="far fa-heart" style="background-color: #fff;"></span></li>
+                  <li class="icon"><span class="fas fa-shopping-bag" style="background-color: #fff;"></span></li>
               </ul>
           </div>
           <div class="title pt-4 pb-1"> Empire Waist Dresses</div>
@@ -235,9 +235,9 @@
               <img src="https://images.pexels.com/photos/6311392/pexels-photo-6311392.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                  <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                  <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                  <li class="icon"><span class="fas fa-shopping-bag"></span></li>
+                  <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
+                  <li class="icon mx-3"><span class="far fa-heart" style="background-color: #fff;"></span></li>
+                  <li class="icon"><span class="fas fa-shopping-bag" style="background-color: #fff;"></span></li>
               </ul>
           </div>
           <div class="tag bg-green">new</div>
