--- a/app/static/home.css
+++ b/app/static/home.css
@@ -107,11 +107,11 @@ body {
 
 .navbar-nav .nav-link.active,
 .border-red {
-    border-bottom: 3px solid #b71c1c;
+    border-bottom: 3px solid #FF0000;
 }
 
 .navbar-nav .nav-link:hover {
-    border-bottom: 3px solid #b71c1c;
+    border-bottom: 3px solid #FF0000;
 }
 
 .container .product-item {
@@ -150,8 +150,8 @@ body {
 }
 
 .container .product-item .product .icons .icon:hover {
-    background-color: #b71c1c;
-    color: #fff;
+    background-color: #fff;
+    color: #FF0000;
 }
 
 .container .product-item .product .icons .icon:nth-last-of-type(3) {
@@ -187,7 +187,7 @@ body {
 
 .container .product-item .fa-star {
     font-size: 0.65rem;
-    color: goldenrod;
+    color: #FF0000;
 }
 
 .container .product-item .price {
@@ -209,7 +209,8 @@ body {
     color: #fff;
 }
 .bg-red{
-    background-color: #bb3535;
+    background-color: #FF0000
+    ;
     color: #fff;
 }
 
