--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -78,7 +78,7 @@
       <div
           class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3">
           <div class="product">
-              <img src="https://images.pexels.com/photos/54203/pexels-photo-54203.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760708/Zenith/img2_dmhdhu.png"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
                   <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
@@ -100,7 +100,7 @@
       <div
           class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3">
           <div class="product">
-              <img src="https://images.pexels.com/photos/6764040/pexels-photo-6764040.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760707/Zenith/img1_hexz22.png"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
                   <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
@@ -122,7 +122,7 @@
       <div
           class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3">
           <div class="product">
-              <img src="https://images.pexels.com/photos/914668/pexels-photo-914668.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760708/Zenith/img3_qmwyum.png"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
                   <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
@@ -144,7 +144,7 @@
       <div
           class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3">
           <div class="product">
-              <img src="https://images.pexels.com/photos/6311392/pexels-photo-6311392.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760708/Zenith/img4_kojhia.png"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
                   <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
@@ -167,7 +167,7 @@
       <div
           class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3">
           <div class="product">
-              <img src="https://images.pexels.com/photos/54203/pexels-photo-54203.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760712/Zenith/img7_wfyfci.png"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
                   <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
@@ -189,7 +189,7 @@
       <div
           class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3">
           <div class="product">
-              <img src="https://images.pexels.com/photos/6764040/pexels-photo-6764040.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760711/Zenith/img6_thbxny.png"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
                   <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
@@ -211,7 +211,7 @@
       <div
           class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3">
           <div class="product">
-              <img src="https://images.pexels.com/photos/914668/pexels-photo-914668.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760711/Zenith/img8_azyevn.png"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
                   <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
@@ -232,7 +232,7 @@
       <div
           class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3">
           <div class="product">
-              <img src="https://images.pexels.com/photos/6311392/pexels-photo-6311392.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760709/Zenith/img5_dply5r.png"
                   alt="">
               <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
                   <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
