--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -87,7 +87,7 @@
               </ul>
           </div>
           <div class="tag bg-red">sale</div>
-          <div class="title pt-4 pb-1">Winter Sweater</div>
+          <div class="title pt-4 pb-1">Zenith Edition Watches</div>
           <div class="d-flex align-content-center justify-content-center">
               <span class="fas fa-star"></span>
               <span class="fas fa-star"></span>
@@ -109,7 +109,7 @@
               </ul>
           </div>
           <div class="tag bg-black">out of stock</div>
-          <div class="title pt-4 pb-1">Denim Dresses</div>
+          <div class="title pt-4 pb-1">Zenith Limited Edition Watches</div>
           <div class="d-flex align-content-center justify-content-center">
               <span class="fas fa-star"></span>
               <span class="fas fa-star"></span>
@@ -131,7 +131,7 @@
               </ul>
           </div>
           <div class="tag bg-green">new</div>
-          <div class="title pt-4 pb-1"> Empire Waist Dresses</div>
+          <div class="title pt-4 pb-1">Zenith Limited Edition Watches</div>
           <div class="d-flex align-content-center justify-content-center">
               <span class="fas fa-star"></span>
               <span class="fas fa-star"></span>
@@ -152,7 +152,7 @@
                   <li class="icon"><span class="fas fa-shopping-bag" style="background-color: #fff;"></span></li>
               </ul>
           </div>
-          <div class="title pt-4 pb-1">Pinafore Dresses</div>
+          <div class="title pt-4 pb-1">Zen Watches</div>
           <div class="d-flex align-content-center justify-content-center">
               <span class="fas fa-star"></span>
               <span class="fas fa-star"></span>
@@ -176,7 +176,7 @@
               </ul>
           </div>
           <div class="tag bg-red">sale</div>
-          <div class="title pt-4 pb-1">Winter Sweater</div>
+          <div class="title pt-4 pb-1">Zenith Limited Edition Watches</div>
           <div class="d-flex align-content-center justify-content-center">
               <span class="fas fa-star"></span>
               <span class="fas fa-star"></span>
@@ -198,7 +198,7 @@
               </ul>
           </div>
           <div class="tag bg-black">out of stock</div>
-          <div class="title pt-4 pb-1">Denim Dresses</div>
+          <div class="title pt-4 pb-1">Zenith Limited Edition Watches</div>
           <div class="d-flex align-content-center justify-content-center">
               <span class="fas fa-star"></span>
               <span class="fas fa-star"></span>
@@ -219,7 +219,7 @@
                   <li class="icon"><span class="fas fa-shopping-bag" style="background-color: #fff;"></span></li>
               </ul>
           </div>
-          <div class="title pt-4 pb-1"> Empire Waist Dresses</div>
+          <div class="title pt-4 pb-1"> Empire Watch</div>
           <div class="d-flex align-content-center justify-content-center">
               <span class="fas fa-star"></span>
               <span class="fas fa-star"></span>
@@ -241,7 +241,7 @@
               </ul>
           </div>
           <div class="tag bg-green">new</div>
-          <div class="title pt-4 pb-1">Pinafore Dresses</div>
+          <div class="title pt-4 pb-1">Pinafore Watch</div>
           <div class="d-flex align-content-center justify-content-center">
               <span class="fas fa-star"></span>
               <span class="fas fa-star"></span>
