--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zenith Watches</title>
+    <title>Zenith Watches | Home</title>
     <!--Custom CSS-->
     {% block styles %}
          <link rel="stylesheet" type="text/css" href="{% static 'home.css' %}">
