--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,7 +8,7 @@
     <title>Zenith Watches | Home</title>
     <!--Custom CSS-->
     {% block styles %}
-         <link rel="stylesheet" type="text/css" href="{% static 'home.css' %}">
+         <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
     {% endblock %}
     <!--Fontawesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
