--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +9,7 @@
         <title>Zenith Watches | Products</title>
         <!--Custom CSS-->
         {% block styles %}
-             <link rel="stylesheet" type="text/css" href="{% static 'product.css' %}">
+             <link rel="stylesheet" type="text/css" href="{% static 'css/product.css' %}">
         {% endblock %}
         <!--Fontawesome-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
