--- a/app/static/css/product.css
+++ b/app/static/css/product.css
@@ -10,7 +10,7 @@ body {
 .thumbnail_images ul {
     list-style: none;
     justify-content: center;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     margin-top: 10px
 }
@@ -18,20 +18,20 @@ body {
 .thumbnail_images ul li {
     margin: 5px;
     padding: 10px;
-    border: 2px solid #eee;
+    /* border: 2px solid #eee; */
     cursor: pointer;
     transition: all 0.5s
 }
 
-.thumbnail_images ul li:hover {
+/* .thumbnail_images ul li:hover {
     border: 2px solid #000
-}
+} */
 
 .main_image {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 1px solid #eee;
+    /* border-bottom: 1px solid #eee; */
     height: 400px;
     width: 100%;
     overflow: hidden
