--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -24,7 +24,7 @@
         <div class="card">
             <div class="row g-0">
                 <div class="col-md-3">
-                    <div class="thumbnail_images">
+                    <div class="mt-5 pt-5 thumbnail_images">
                         <ul id="thumbnail">
                             <li>
                                 <img onclick="changeImage(this)" src="https://i.imgur.com/TAzli1U.jpg" width="70">
