Dummy product description

--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src={% static 'js/product.js' %} defer></script>
 
-        <title>Zenith Watches | Products</title>
+        <title>Zenith Watches | Watches</title>
         <!--Custom CSS-->
         {% block styles %}
              <link rel="stylesheet" type="text/css" href="{% static 'css/product.css' %}">
@@ -50,14 +50,13 @@
                 <div class="col-md-3">
                     <div class="p-3 right-side">
                         <div class="d-flex justify-content-between align-items-center">
-                            <h3>IIlana</h3> 
+                            <h3>Zenith</h3> 
                             <span class="heart"><i class='fas fa-heart' style="color:#FF0000;"></i></span>
                         </div>
                         <div class="mt-2 pr-3 content">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua</p>
+                            <p>Special Zenith Empire Collection</p>
                         </div>
-                        <h3>$430.99</h3>
+                        <h3>$40.99</h3>
                         <div class="ratings d-flex flex-row align-items-center">
                             <div class="d-flex flex-row"> 
                                 <i class="fas fa-star" style="color:#FF0000"></i> 
