--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -19,9 +19,9 @@
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     </head>
 
-<body>
+<body style="background-color: #F3EEE7;">
     <div class="container mt-5 mb-5">
-        <div class="card">
+        <div class="card" style="border: none;">
             <div class="row g-0">
                 <div class="col-md-3">
                     <div class="mt-5 pt-5 thumbnail_images">
@@ -41,35 +41,36 @@
                 </div>
                 <div class="col-md-6 border-end">
                     <div class="d-flex flex-column justify-content-center">
-                        <div class="main_image">
+                        <div class="main_image" >
                             <img src="https://i.imgur.com/TAzli1U.jpg" id="main_product_image" width="350">
                         </div>
                         
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="p-3 right-side">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h3>Zenith</h3> 
+                <div class="col-md-3" style="background-color: #fff; padding:1em; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
+                    <div class="p-3 right-side" style="background-color: #fff;">
+                        <div class="d-flex justify-content-between align-items-center" style="background-color: #fff;">
+                            <h3 style="background-color: #fff;">Zenith</h3> 
                             <span class="heart"><i class='fas fa-heart' style="color:#FF0000;"></i></span>
                         </div>
-                        <div class="mt-2 pr-3 content">
-                            <p>Special Zenith Empire Collection</p>
+                        <div class="mt-2 pr-3 content" style="background-color: #fff;">
+                            <p style="background-color: #fff;">Special Zenith Empire Collection</p>
                         </div>
-                        <h3>$40.99</h3>
-                        <div class="ratings d-flex flex-row align-items-center">
-                            <div class="d-flex flex-row"> 
-                                <i class="fas fa-star" style="color:#FF0000"></i> 
-                                <i class="fas fa-star" style="color:#FF0000"></i> 
-                                <i class="fas fa-star" style="color:#FF0000"></i> 
-                                <i class="fas fa-star" style="color:#FF0000"></i> 
-                                <i class="far fa-star" style="color:#FF0000"></i> 
+                        <h3 style="background-color: #fff;">$40.99</h3>
+                        <div class="ratings d-flex flex-row align-items-center" style="background-color: #fff;">
+                            <div class="d-flex flex-row" style="background-color: #fff;"> 
+                                <i class="fas fa-star" style="color:#FF0000; background-color: #fff;"></i> 
+                                <i class="fas fa-star" style="color:#FF0000; background-color: #fff;"></i> 
+                                <i class="fas fa-star" style="color:#FF0000; background-color: #fff;"></i> 
+                                <i class="fas fa-star" style="color:#FF0000; background-color: #fff;"></i> 
+                                <i class="far fa-star" style="color:#FF0000; background-color: #fff;"></i> 
                             </div> 
-                            <span>441 reviews</span>
+                            <span style="background-color: #fff;">441 reviews</span>
                         </div>
-                        <div class="mt-5"> <span class="fw-bold">Color</span>
-                            <div class="colors">
-                                <ul id="marker">
+                        <div class="mt-5" style="background-color: #fff;"> 
+                            <span class="fw-bold" style="background-color: #fff;">Color</span>
+                            <div class="colors" style="background-color: #fff;">
+                                <ul id="marker" style="background-color: #fff;">
                                     <li id="marker-1"></li>
                                     <li id="marker-2"></li>
                                     <li id="marker-3"></li>
@@ -80,10 +81,7 @@
                         </div>
                         <div class="buttons d-flex flex-row mt-5 gap-3"> <button class="btn btn-outline-dark">Buy
                                 Now</button> <button class="btn btn-dark">Add to Basket</button> </div>
-                        <div class="search-option"> <i class='bx bx-search-alt-2 first-search'></i>
-                            <div class="inputs"> <input type="text" name=""> </div> <i
-                                class='bx bx-share-alt share'></i>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
