updating product page typography

--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -87,6 +87,73 @@
             </div>
         </div>
     </div>
+
+    <!--Specs-->
+    <div class="container mt-5 mb-5 pt-5">
+        <div class="card" style="border: none;">
+            <div class="row g-0">
+                <div class="col-md-6 pt-3">
+                    <img src="https://i.imgur.com/w6kEctd.jpg" width="400">
+                </div>
+                <div class="col-md-6 pt-3">
+                    <h1>Specifications</h1>
+                        <ul style="list-style: none;">
+                            <li class="pt-2"> <span style="font-weight: bold;">Brand</span> Zen</li>
+                            <li class="pt-2"> <span style="font-weight: bold;">Brand</span> Zen</li>
+                            <li class="pt-2"> <span style="font-weight: bold;">Brand</span> Zen</li>
+                            <li class="pt-2"> <span style="font-weight: bold;">Brand</span> Zen</li>
+                            <li class="pt-2"> <span style="font-weight: bold;">Brand</span> Zen</li>
+                            <li class="pt-2"> <span style="font-weight: bold;">Brand</span> Zen</li>
+                        </ul>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <!--Product Dets-->
+    <div class="container mt-5 mb-5 pt-5">
+        <div class="card" style="border: none; background-color: #F3EEE7;">
+            <h1 class="text-center"> Product Name</h1>
+            <h6 class="text-center" style="background-color: #F3EEE7;">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</h6>
+            <div class="row g-0">
+                <div class="col-md-6 pt-3">
+                    <img src="https://i.imgur.com/TAzli1U.jpg" width="400">
+
+                </div>
+                <div class="col-md-6 pt-3">
+                    <img src="https://i.imgur.com/6ZufmNS.jpg" width="400">
+
+                </div>
+            </div>
+        </div>
+    </div>
+<!--More Details--> 
+<div class="container mt-5 mb-5 pt-5">
+    <div class="card" style="border: none;">
+        <div class="row g-0">
+        <div class="col-md-3 pt-3"> <!--Dummy--> </div>
+
+        <div class="col-md-6 pt-3">
+            <img src="https://i.imgur.com/w6kEctd.jpg" width="500">
+        </div>
+
+        <div class="col-md-3 pt-3"> <!--Dummy--> </div>
+
+    </div>
+</div>
+
+</div>
+<!--More from the Seller-->
+
+<div class="container mt-5 mb-5 pt-5">
+    <div class="card" style="border: none; background-color: #F3EEE7;">
+        <h1 class="text-center"> More From This Seller</h1>
+
+        <div class="row g-0">
+        </div>
+        </div>
+        </div>
+        
 </body>
 
 </html>
