--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -147,12 +147,109 @@
 
 <div class="container mt-5 mb-5 pt-5">
     <div class="card" style="border: none; background-color: #F3EEE7;">
-        <h1 class="text-center"> More From This Seller</h1>
+        <h3 class="text-center"> More From This Seller</h3>
 
-        <div class="row g-0">
+        <div class="row">
+            <div
+            class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3">
+            <div class="product">
+              <div class="tag bg-red">sale</div>
+  
+                <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760708/Zenith/img2_dmhdhu.png"
+                    alt="">
+                <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
+                    <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
+                    <li class="icon mx-3"><span class="far fa-heart" style="background-color: #fff;"></span></li>
+                    <li class="icon"><span class="fas fa-shopping-bag" style="background-color: #fff;"></span></li>
+                </ul>
+            </div>
+            <div class="title pt-4 pb-1">Zenith Edition Watches</div>
+            <div class="d-flex align-content-center justify-content-center">
+                <span class="fas fa-star"></span>
+                <span class="fas fa-star"></span>
+                <span class="fas fa-star"></span>
+                <span class="fas fa-star"></span>
+                <span class="fas fa-star"></span>
+            </div>
+            <div class="price">$ 60.0</div>
         </div>
+        <!--Prod 2-->
+
+        <div
+        class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3">
+        <div class="product">
+          <div class="tag bg-red">sale</div>
+
+            <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760708/Zenith/img2_dmhdhu.png"
+                alt="">
+            <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
+                <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
+                <li class="icon mx-3"><span class="far fa-heart" style="background-color: #fff;"></span></li>
+                <li class="icon"><span class="fas fa-shopping-bag" style="background-color: #fff;"></span></li>
+            </ul>
         </div>
+        <div class="title pt-4 pb-1">Zenith Edition Watches</div>
+        <div class="d-flex align-content-center justify-content-center">
+            <span class="fas fa-star"></span>
+            <span class="fas fa-star"></span>
+            <span class="fas fa-star"></span>
+            <span class="fas fa-star"></span>
+            <span class="fas fa-star"></span>
         </div>
+        <div class="price">$ 60.0</div>
+    </div>
+    <!--Prod 3-->
+    <div
+    class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3">
+    <div class="product">
+      <div class="tag bg-red">sale</div>
+
+        <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760708/Zenith/img2_dmhdhu.png"
+            alt="">
+        <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
+            <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
+            <li class="icon mx-3"><span class="far fa-heart" style="background-color: #fff;"></span></li>
+            <li class="icon"><span class="fas fa-shopping-bag" style="background-color: #fff;"></span></li>
+        </ul>
+    </div>
+    <div class="title pt-4 pb-1">Zenith Edition Watches</div>
+    <div class="d-flex align-content-center justify-content-center">
+        <span class="fas fa-star"></span>
+        <span class="fas fa-star"></span>
+        <span class="fas fa-star"></span>
+        <span class="fas fa-star"></span>
+        <span class="fas fa-star"></span>
+    </div>
+    <div class="price">$ 60.0</div>
+</div>
+<!--Prod 4-->
+<div
+class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3">
+<div class="product">
+  <div class="tag bg-red">sale</div>
+
+    <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760708/Zenith/img2_dmhdhu.png"
+        alt="">
+    <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
+        <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
+        <li class="icon mx-3"><span class="far fa-heart" style="background-color: #fff;"></span></li>
+        <li class="icon"><span class="fas fa-shopping-bag" style="background-color: #fff;"></span></li>
+    </ul>
+</div>
+<div class="title pt-4 pb-1">Zenith Edition Watches</div>
+<div class="d-flex align-content-center justify-content-center">
+    <span class="fas fa-star"></span>
+    <span class="fas fa-star"></span>
+    <span class="fas fa-star"></span>
+    <span class="fas fa-star"></span>
+    <span class="fas fa-star"></span>
+</div>
+<div class="price">$ 60.0</div>
+</div>
+
+    </div>
+</div>
+</div>
         
 </body>
 
