--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -20,6 +20,44 @@
     </head>
 
 <body style="background-color: #F3EEE7;">
+    <!--Navigation Bar-->
+    <div class="container mt-5 mb-2">
+        <div class="topnav">
+
+            <!-- Centered link -->
+            <div class="topnav-centered">
+              <a href="#" class="active zen">ZENITH</a>
+            </div>
+            
+            <!-- Left-aligned links (default) -->
+            <a href="#" class="navText" style="color: black;">His</a>
+            <a href="#" class="navText" style="color: black;">Hers</a>
+            
+            <!-- Right-aligned links -->
+            <div class="topnav-right">
+              <a href="#" class="navText" style="color: black;">Our Story</a>
+              <a href="#" font-weight: bold;>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" class="bi bi-person" viewBox="0 0 16 16">
+                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                  </svg>
+              </a>
+              <a href="#" style="font-weight: bold;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" class="bi bi-heart" viewBox="0 0 16 16">
+                    <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                  </svg>
+              </a>
+              <a href="#" font-weight: bold;>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" class="bi bi-lock" viewBox="0 0 16 16">
+                    <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z"/>
+                  </svg>
+              </a>
+
+            </div>
+            
+          </div>
+    </div>
+
+    <!--Main Body Section-->
     <div class="container mt-5 mb-5">
         <div class="card" style="border: none;">
             <div class="row g-0">
@@ -147,7 +185,7 @@
 
 <div class="container mt-5 mb-5 pt-5">
     <div class="card" style="border: none; background-color: #F3EEE7;">
-        <h3 class="text-center"> More From This Seller</h3>
+        <h3 class="text-center"> More from this collection</h3>
 
         <div class="row">
             <div
