product images mapped to page

--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -65,14 +65,14 @@
                     <div class="mt-5 pt-5 thumbnail_images">
                         <ul id="thumbnail">
                             <li>
-                                <img onclick="changeImage(this)" src="https://i.imgur.com/TAzli1U.jpg" width="70">
+                                <img onclick="changeImage(this)" src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1662233082/Zenith/thumb1_hgiynw.png" width="70">
                             </li>
                             <li>
-                                <img onclick="changeImage(this)" src="https://i.imgur.com/w6kEctd.jpg" width="70">
+                                <img onclick="changeImage(this)" src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1662233076/Zenith/thumb2_iq2ry8.png" width="70">
                             </li>
-                            <li><img onclick="changeImage(this)" src="https://i.imgur.com/L7hFD8X.jpg" width="70">
+                            <li><img onclick="changeImage(this)" src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1662233072/Zenith/thumb3_fuchwu.png" width="70">
                             </li>
-                            <li><img onclick="changeImage(this)" src="https://i.imgur.com/6ZufmNS.jpg" width="70">
+                            <li><img onclick="changeImage(this)" src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1662233069/Zenith/thumb4_lfmahr.png" width="70">
                             </li>
                         </ul>
                     </div>
@@ -80,7 +80,7 @@
                 <div class="col-md-6 border-end">
                     <div class="d-flex flex-column justify-content-center">
                         <div class="main_image" >
-                            <img src="https://i.imgur.com/TAzli1U.jpg" id="main_product_image" width="350">
+                            <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1662233087/Zenith/prodDemo_mo1lse.png" id="main_product_image" width="350">
                         </div>
                         
                     </div>
@@ -131,7 +131,7 @@
         <div class="card" style="border: none;">
             <div class="row g-0">
                 <div class="col-md-6 pt-3">
-                    <img src="https://i.imgur.com/w6kEctd.jpg" width="400">
+                    <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1662233087/Zenith/prodDemo_mo1lse.png" width="400">
                 </div>
                 <div class="col-md-6 pt-3">
                     <h1>Specifications</h1>
@@ -155,11 +155,11 @@
             <h6 class="text-center" style="background-color: #F3EEE7;">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</h6>
             <div class="row g-0">
                 <div class="col-md-6 pt-3">
-                    <img src="https://i.imgur.com/TAzli1U.jpg" width="400">
+                    <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1662233106/Zenith/prod2_q5yuba.png" width="400">
 
                 </div>
                 <div class="col-md-6 pt-3">
-                    <img src="https://i.imgur.com/6ZufmNS.jpg" width="400">
+                    <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1662233103/Zenith/prod3_nfudsk.png" width="400">
 
                 </div>
             </div>
@@ -172,7 +172,7 @@
         <div class="col-md-3 pt-3"> <!--Dummy--> </div>
 
         <div class="col-md-6 pt-3">
-            <img src="https://i.imgur.com/w6kEctd.jpg" width="500">
+            <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760711/Zenith/img8_azyevn.png" width="500">
         </div>
 
         <div class="col-md-3 pt-3"> <!--Dummy--> </div>
@@ -193,7 +193,7 @@
             <div class="product">
               <div class="tag bg-red">sale</div>
   
-                <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760708/Zenith/img2_dmhdhu.png"
+                <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1662233213/Zenith/col1_mtbnyv.png"
                     alt="">
                 <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
                     <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
@@ -218,7 +218,7 @@
         <div class="product">
           <div class="tag bg-red">sale</div>
 
-            <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760708/Zenith/img2_dmhdhu.png"
+            <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1662233221/Zenith/col3_pvsrjh.png"
                 alt="">
             <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
                 <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
@@ -266,7 +266,7 @@ class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-c
 <div class="product">
   <div class="tag bg-red">sale</div>
 
-    <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1661760708/Zenith/img2_dmhdhu.png"
+    <img src="https://res.cloudinary.com/dyiuol5sx/image/upload/v1662233217/Zenith/col2_mltciv.png"
         alt="">
     <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
         <!-- <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li> -->
