--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -8,7 +8,7 @@
     <title>Zenith Watches | Home</title>
     <!--Custom CSS-->
     {% block styles %}
-         <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
+         <link rel="stylesheet" type="text/css" href="{% static 'css/landing.css' %}">
     {% endblock %}
     <!--Fontawesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,6 +16,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body style="background-color: #F3EEE7;">
+    <div class="container-fluid mainContainer" 
+    >
     <div class="container mt-5 mb-2">
         <div class="topnav">
 
@@ -50,7 +52,47 @@
             </div>
             
           </div>
-          <h1 class="text-center mt-3 mb-3 wtchs"> Watches</h1>
     </div>
+    <div class="text" style="background-color: transparent;">
+       <div class="zenTitle">
+        <h1 style="background-color: transparent;">
+            Zenith<br>Watches
+        </h1>
+       </div>
+        <ul style="background-color: transparent; list-style: none; display:flex">
+            <li style="
+            background-color: transparent; color:#fff;
+            font-size: 20px;
+            font-weight: 700;">
+                Leather
+            </li>
+            <span class="dot"></span> 
+            <li style="
+            background-color: transparent; color:#fff;
+            font-size: 20px;
+            font-weight: 700;">
+                Black
+            </li>
+            <span class="dot"></span> 
+            <li style="
+            background-color: transparent; color:#fff;
+            font-size: 20px;
+            font-weight: 700;">
+                Anthracite
+            </li>
+            <span class="dot"></span> 
+            <li style="
+            background-color: transparent; color:#fff;
+            font-size: 20px;
+            font-weight: 700;">
+                Dial
+            </li>
+        </ul>
+        <h6 class="mt-4 pt-5" style="background-color: transparent; color:#fff; font-size: 20px; font-weight: 300">
+            Discover   <i class="arrow right" style="background-color: transparent; color:#fff;"></i>
+        </h6>
+       
+    </div>
+</div>
     <!--Body-->
     </body>
