--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -95,4 +95,30 @@
     </div>
 </div>
     <!--Body-->
+
+    <!--Intro-->
+    <div class="container intro mt-5 mb-5 pt-5">
+        <div class="card" style="border: none; background-color: #F3EEE7;">
+            <h1 class="text-left"> INTRO </h1>
+            <div class="row g-0">
+                <div class="col-md-6 pt-3 abt">
+                    <h1>About</h1>
+                </div>
+                <div class="col-md-6 pt-3">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod t
+empor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ve
+niam, quis nostrud exercitation ullamco.
+                    </p>
+
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod t
+empor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ve
+niam, quis nostrud exercitation ullamco.
+                    </p>
+
+                </div>
+            </div>
+        </div>
+    </div>    
     </body>
