--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -120,5 +120,65 @@ niam, quis nostrud exercitation ullamco.
                 </div>
             </div>
         </div>
-    </div>    
+    </div>   
+    
+    <!--BreakingPoint-->
+    <div class="container intro mt-5 mb-5 pt-5">
+        <div class="card" style="border: none; background-color: #F3EEE7;">
+            <div class="row g-0">
+                <div class="col-md-6 pt-3 brkpt">
+                    <h1>The Breaking Point</h1>
+                    <p>
+                        Look at the small point on the sphere and  you will see that everyday, it changes color. With ZENITH, it’s a different narrative
+                    </p>
+                    <div class="breakImg"></div>
+                </div>
+                <div class="col-md-6 pt-3 breakpointImg"></div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="container intro mt-5 mb-5 pt-5">
+        <div class="card" style="border: none; background-color: #F3EEE7;">
+            <div class="row g-0">
+                <div class="col-md-12 pt-3 dummy">
+                </div>
+            </div>
+        </div>
+    </div>
+                    <div class="container intro mt-5 mb-5 pt-5">
+                        <div class="card" style="border: none; background-color: #F3EEE7;">
+                            <div class="row g-0">
+                                <div class="col-md-6 pt-3 zenStory">
+                                    <h1>Zenith Story</h1>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod t
+                                        empor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ve
+                                        niam, quis nostrud exercitation ullamco.                                
+                                    </p>
+
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod t
+                                        empor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ve
+                                        niam, quis nostrud exercitation ullamco.                                
+                                    </p>
+
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod t
+                                        empor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ve
+                                        niam, quis nostrud exercitation ullamco.                                
+                                    </p>
+
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod t
+                                        empor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ve
+                                        niam, quis nostrud exercitation ullamco.                                
+                                    </p>
+                                </div>
+                                <div class="col-md-6 pt-3 zenStoryImg"></div>
+                
+                            </div>
+                        </div>
+                    </div>
     </body>
