--- a/users/templates/shipping.html
+++ b/users/templates/shipping.html
@@ -50,9 +50,10 @@
             </div>
             
           </div>
-          <h1 class="text-center mt-3 mb-3 wtchs"> Watches</h1>
+          <h1 class="text-center mt-3 mb-3 wtchs"> Shipping</h1>
     </div>
 <!--Main Body-->
-    <h1>Shipping Page</h1>
+
+
 </body>
 </html>
