--- a/users/templates/favorites.html
+++ b/users/templates/favorites.html
@@ -50,7 +50,7 @@
             </div>
             
           </div>
-          <h1 class="text-center mt-3 mb-3 wtchs"> Watches</h1>
+          <h1 class="text-center mt-3 mb-3 wtchs"> Favorites</h1>
     </div>
 <!--Main Body-->
     <h1>Shipping Page</h1>
